<resources>
    <string name="app_name">Digitify</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movies">Search Movies</string>
    <string name="explore">Explore Movies By Category</string>
    <string name="movies_list">Movies List</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="releaseDate">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="rating">Rating</string>
    <string name="count">Vote Count</string>
    <string name="cast">Cast</string>
    <string name="favorite_movies_list">Favorite Movies List</string>
    <string name="clear_favorite">Clear Favorite List</string>
    <string name="set_default_category">Set Default Movie Category</string>
    <string name="default_category">Default Movies Category</string>
    <string name="overview_error">Overview is currently unavailable.</string>

    <string name="favourites">Favourites</string>
    <string name="movies">Movies</string>
    <string name="movies_detail">Movies Detail</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>

    <string-array name="movie_entries">
        <item>@string/popular</item>
        <item>@string/now_playing</item>
        <item>@string/upcoming</item>
        <item>@string/top_rated</item>
    </string-array>

    <string-array name="movie_values">
        <item>popular</item>
        <item>now_playing</item>
        <item>upcoming</item>
        <item>top_rated</item>
    </string-array>

    <string name="cast_error">Unable to show Cast</string>
    <string name="empty_movie_name">Movie name cannot be empty.</string>
    <string name="delete_favourites">Delete Favourites</string>
    <string name="retry">Retry</string>
    <string name="no_movies_error">Unable to load data!\nTry again</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="actual_name">Actual Name</string>
    <string name="character_name">Character Name</string>
    <string name="categorized">Categorized Movies</string>

</resources>