<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/color_box_background"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundMode="none"
                app:boxCollapsedPaddingTop="0dp"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                app:startIconTint="@color/color_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSearchMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/search_movies"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="10dp"
                    android:textColorHint="@color/color_hint_text" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/explore"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/mcvSearch" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvExplore"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:chipBackgroundColor="@android:color/transparent"
                tools:chipStrokeColor="@color/colorAccent"
                tools:chipStrokeWidth="1dp"
                android:checkable="true"
                android:text="@string/popular"
                tools:visibility="visible" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:checkable="true"
                tools:chipBackgroundColor="@android:color/transparent"
                tools:chipStrokeColor="@color/colorAccent"
                tools:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing"
                android:checkable="true"
                tools:chipBackgroundColor="@android:color/transparent"
                tools:chipStrokeColor="@color/colorAccent"
                tools:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:checkable="true"
                tools:chipBackgroundColor="@android:color/transparent"
                tools:chipStrokeColor="@color/colorAccent"
                tools:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvMoviesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies_list"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/chip_group" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMoviesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviesList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/mcvSearch"
            app:spanCount="3"
            tools:itemCount="7"
            tools:listitem="@layout/rv_movie_list_item" />

        <ProgressBar
            android:id="@+id/pbMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@+id/mcvSearch"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviesList" />

        <TextView
            android:id="@+id/tv_movies_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="120dp"
            android:text="@string/no_movies_error"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movies_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

