<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.movieapp.diditify.ui.MoviesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/color_box_background"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:boxBackgroundMode="none"
                app:boxCollapsedPaddingTop="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                app:startIconTint="@color/color_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSearchPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:lines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/search_movies"
                    android:padding="10dp"
                    android:textColorHint="@color/color_hint_text" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/explore"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/mcvSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoriesChip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvExplore"
            app:spanCount="4"
            tools:itemCount="4"
            tools:listitem="@layout/rv_category_chip_view" />

        <TextView
            android:id="@+id/tvMoviesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/movies_list"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/rvCategoriesChip" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMoviesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviesList"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="7"
            tools:listitem="@layout/rv_movie_list"/>

        <ProgressBar android:id="@+id/pbMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/mcvSearch"
            app:layout_constraintEnd_toEndOf="@+id/mcvSearch"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviesList"
            android:layout_marginTop="40dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

