<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.MovieDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"

                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="50dp"
                android:minHeight="400dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toTopOf="@id/llMain"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/ic_baseline_favorite_border_24" />

            <LinearLayout
                android:id="@+id/llMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ivPoster"
                app:layout_constraintTop_toBottomOf="@+id/ivPoster">

                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="movie Name" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/background_horizontal_tableview"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/status"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tvStatusDetails"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        tools:text="@string/status" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/background_horizontal_tableview"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/releaseDate"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:text="@string/releaseDate"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/background_horizontal_tableview"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rating"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:text="@string/rating" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/background_horizontal_tableview"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/vote_average"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tvVoteAverage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:text="@string/vote_average"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/background_horizontal_tableview"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/count"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tvCount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:text="@string/count"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingTop="12dp"
                    android:text="@string/overview"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOverviewDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:minLines="5"
                    android:textColor="@android:color/white"
                    tools:text="overview Details" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:orientation="vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/tvCastTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/cast"
                            android:textSize="18sp"
                            android:textStyle="bold" />



                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvCast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/rv_cast_list" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>